--- a/src/cat/insvidreres/inmrec/projecte_espai/connection.properties
+++ b/src/cat/insvidreres/inmrec/projecte_espai/connection.properties
@@ -1,4 +1,4 @@
 #MySQL DB parameters
-user=isma
+user=root
 password=IsmaElPro2002
-url=jdbc:mysql://localhost:3308/database_name
+url=jdbc:mysql://localhost:3308/pes
