windows appear and disappear

--- a/src/cat/insvidreres/inmrec/projecte_espai/connection.properties
+++ b/src/cat/insvidreres/inmrec/projecte_espai/connection.properties
@@ -1,8 +1,4 @@
 #MySQL DB parameters
-user=root
-password=patata
-url=jdbc:mysql://localhost:3307/pes
-
-#user=isma
-#password=IsmaElPro2002
-#url=jdbc:mysql://localhost:3308/database_name
+user=isma
+password=IsmaElPro2002
+url=jdbc:mysql://localhost:3308/pes
