Test Mostrar Dades

--- a/src/cat/insvidreres/inmrec/projecte_espai/connection.properties
+++ b/src/cat/insvidreres/inmrec/projecte_espai/connection.properties
@@ -1,4 +1,8 @@
 #MySQL DB parameters
-user=isma
-password=IsmaElPro2002
-url=jdbc:mysql://localhost:3308/pes
+//user=isma
+//password=IsmaElPro2002
+//url=jdbc:mysql://localhost:3308/pes
+
+user=root
+password=Admin123
+url= jdbc:mysql://localhost:3306/pes
