--- a/src/cat/insvidreres/inmrec/projecte_espai/connection.properties
+++ b/src/cat/insvidreres/inmrec/projecte_espai/connection.properties
@@ -1,5 +1,5 @@
 #MySQL DB parameters
 user=root
-password=patata
-url=jdbc:mysql://localhost:3306/pes
+password=Admin123
+url=jdbc:mysql://localhost:3306/pes?useSSL=false
 
