--- a/src/cat/insvidreres/inmrec/projecte_espai/connection.properties
+++ b/src/cat/insvidreres/inmrec/projecte_espai/connection.properties
@@ -1,5 +1,5 @@
 #MySQL DB parameters
-user=root
-password=patata
-url=jdbc:mysql://localhost:3306/pes
+user=isma
+password=IsmaElPro2002
+url=jdbc:mysql://localhost:3308/pes
 
